# coship

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  SHIP_PERSONA.md  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml
apps/cockpit/: .env.example  Dockerfile  package.json  railway.toml  tsconfig.json
apps/mcp-server/: .env.example  CLAUDE.md  README.md  pyproject.toml  railway.toml
apps/mcp-server/skills/free/matching/: SKILL.md
apps/mcp-server/skills/free/matching/assets/: cofounder-config.template.yaml
apps/mcp-server/skills/free/mvp-scope/: SKILL.md
apps/mcp-server/skills/free/tech-stack/: SKILL.md
apps/mcp-server/skills/pro/code-review/: SKILL.md
apps/mcp-server/skills/pro/deployment/: SKILL.md
apps/mcp-server/src/coship_mcp/: __init__.py  auth_code.py  config.py  server.py  skills_registry.py
apps/mcp-server/src/coship_mcp/middleware/: __init__.py  subscription.py
apps/mcp-server/tests/: conftest.py  test_auth_code_crypto.py  test_auth_flow.py
apps/web/: .env.example  package.json
marketing-automation/: PLATFORM-BIOS-V2.md  PLATFORM-BIOS.md  QUICK-START.md  README.md
marketing-automation/skills/: ship-content.md  ship-daily-check.md  ship-respond.md
public/: robots.txt
src/layouts/: BaseLayout.astro
src/styles/: global.css
supabase/: config.toml
supabase/migrations/: 20260204_profiles.sql  20260206_github_projects.sql  20260207_mcp_connection.sql  20260208_project_personality.sql  20260209_realtime_personality.sql  20260210_merge_docs_drop_prefs.sql
(+55 files in other folders)
