[project]
name = "coship-mcp"
version = "0.1.0"
description = "CoShip MCP Server - Agentic Co-founder for non-technical founders"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0b1",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coship_mcp"]

[tool.uv]
prerelease = "allow"
